tests/baselines/reference/project/moduleIdentifier/node/moduleIdentifier.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== decl.ts (0 errors) ====
    export interface P { x: number; y: number; }
    export var a = 1;
==== consume.ts (0 errors) ====
    import M = require("./decl");
    
    var p : M.P;
    var x1 = M.a;
    